// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering should match, with a tvshowName 1`] = `
<Styled(ListItem)
  onPress={[Function]}
>
  <Styled(Body)>
    <Styled(Text)>
      Deadwood
    </Styled(Text)>
  </Styled(Body)>
</Styled(ListItem)>
`;

exports[`Rendering should match, with an empty tvshowName 1`] = `
<Styled(ListItem)
  onPress={[Function]}
>
  <Styled(Body)>
    <Styled(Text) />
  </Styled(Body)>
</Styled(ListItem)>
`;
